debug: tooltips not showing correctly

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ a:visited {
 }
 
 iframe {
-    width: auto;
+    width: 100%;
     height: 100%;
     margin: auto;
 }
@@ -158,7 +158,6 @@ iframe {
 }
 
 #actual-text .tooltip {
-    position: absolute;
     background: #333;
     color: #fff;
     padding: 10px 10px;
@@ -168,6 +167,23 @@ iframe {
     pointer-events: none;
     opacity: 0;
     transition: opacity 1s ease;
+}
+
+#actual-text .tt-area-1 {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 64px;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+#actual-text .tt-area-2 {
+    position: absolute;
+    display: flex;
+    flex-direction: column; 
+    right: 16px;
+    top: 64px;
 }
 
 #actual-text .tooltip img {
